set swagger to crontrollers
