# src/adapter/in/http/controllers/jwtTokenController.go
@@ -27,12 +27,23 @@ func NewJwtTokenController(ctr *container.Container) *JwtTokenController {
 	}
 }
 
+// ShowUser godoc
+// @Summary      Refresh token
+// @Description  get auth token by refresh_token
+// @Tags         login
+// @Accept       json
+// @Produce      json
+// @Param        token body      in.JwtTokenRequest  true  "Token Body"
+// @Success      200  {object}  transport.EncodedSuccess{data=auth.TokenPair,success=bool} "Result"
+// @Failure      400  {string}  string    "Bad Request"
+// @Failure      402  {string}  string    "Unauthorized"
+// @Router       /api/v1/refresh_token [post]
 func (t *JwtTokenController) RefreshToken(c *fiber.Ctx) error {
 	ctx := c.Context()
 	tokenReq := &useCase.JwtTokenRequest{}
 
 	if err := c.BodyParser(tokenReq); err != nil {
-		return t.errorHandler.HandleError(c, err, http.StatusBadGateway)
+		return t.errorHandler.HandleError(c, err, http.StatusBadRequest)
 	}
 
 	tokens, err := t.svc.RefreshToken(ctx, tokenReq)
@@ -41,5 +52,5 @@ func (t *JwtTokenController) RefreshToken(c *fiber.Ctx) error {
 		return t.errorHandler.HandleError(c, err, http.StatusUnauthorized)
 	}
 	payload := t.encoder.Encode(tokens, nil, true)
-	return transport.Send(c, payload, http.StatusAccepted)
+	return transport.Send(c, payload, http.StatusOK)
 }
